models 47: added autoincrement to Users class primary key.
