@@ -10,7 +10,7 @@
   <script src="https://unpkg.com/jquery"></script>
   <script src="https://unpkg.com/bootstrap"></script>
 
-  <link rel="stylesheet" 
+  <link rel="stylesheet"
         href="https://www.unpkg.com/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="/static/stylesheets/style.css">
   <link rel="shortcut icon" href="/static/favicon.ico">
@@ -56,7 +56,11 @@
           </a>
         </li>
         <li><a href="/messages/new">New Message</a></li>
-        <li><a href="/logout">Log out</a></li>
+        <!-- <li><a href="/logout">Log out</a></li> -->
+        <form action="/logout" method="POST">
+          {{ g.crsf_form.hidden_tag() }}
+          <button class="btn btn-primary">Log Out</button>
+        </form>
       {% endif %}
 
     </ul>
