@@ -1,2 +1,5 @@
-models 47: added autoincrement to Users class primary key.
-
+models.py 47: added autoincrement to Users class primary key.
+forms.py 49-50: added CRSF form for valid log out post requests
+base.html 59-63: made logout into a form POST with a hidden field for the csrf token
+app.py 35-38: added csrf_form property to g "object" assigned to instance of CSRF form (line 2)
+app.py 128-133: added functionality to '/logout' route to invoke do_logout() on a valid logout form submission
